[package]
edition = "2021"
name = "webview-rs"
version = "0.0.0"
description = "Rust webview for Node.js"
license = "MIT"
authors = ["2nthony"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0.2", default-features = false, features = ["napi4"] }
napi-derive = "2.0.1"
web-view = { version = "0.7" }

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
